# advent-of-code-2016

day5/cpp/src/: CMakeLists.txt  mytarget.cpp
day5/ocaml/: dune  main.ml
